[package]
name = "systemd"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.0"
log = "0.4"
fern = "0.7"
chrono = "0.4"
once_cell = "1.21.0"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
windows-service = "0.8.0"
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
] }